# globalsearch-rs

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: globalsearch-rs-CI.yml
benches/: batch_iterations.rs  parallel_performance.rs  scatter_search.rs  six_hump_camel.rs
examples/: 1d-griewank.rs  3d-ackley.rs  basic_tutorial.rs  catalytic_cracking.rs  checkpointing_example.rs  checkpointing_population_size_expansion.rs  constrained_optimization.rs  cross_in_tray.rs  extended_checkpointing.rs  shubert_observer.rs  sixhumpcamel.rs
paper/: paper.bib  paper.md
python/: Cargo.toml  README.md  pyglobalsearch.pyi  pyproject.toml
python/docs/: api.rst  conf.py
python/examples/: basic_tutorial.py  constrained_optimization.py  shubert_observer.py
python/src/: builders.rs  lib.rs  observers.rs
python/tests/: test_custom_points.py  test_error_handling.py  test_numpy_integration.py
src/: checkpoint.rs  filters.rs  oqnlp.rs  scatter_search.rs  types.rs
src/local_solver/: builders.rs  mod.rs  runner.rs
src/observers/: mod.rs
