[package]
name = "pyglobalsearch"
version = "0.5.0"
edition = "2024"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]
license = "MIT"
description = "Python bindings for the globalsearch crate"
readme = "README.md"
repository = "https://github.com/GermanHeim/globalsearch-rs"
keywords = ["optimization", "math", "science"]
categories = ["science", "mathematics"]
publish = false
rust-version = "1.85"
exclude = ["/media"]

[lib]
name = "pyglobalsearch"
crate-type = ["cdylib"]

[dependencies]
globalsearch = { version = "0.5.0", path = "..", features = ["rayon", "argmin"] }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
ndarray = "0.16.1"
numpy = "0.28.0"
seq-macro = "0.3"

[package.metadata.maturin]
bindings = "pyo3"
